--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div id="alert-container"></div>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
